--- a/proxy.yaml
+++ b/proxy.yaml
@@ -1,123 +1,6 @@
-  # PT站点
-  - DOMAIN-KEYWORD,announce,DIRECT
-  - DOMAIN-KEYWORD,torrent,DIRECT
-  - DOMAIN-KEYWORD,tracker,DIRECT
-  - DOMAIN-SUFFIX,52pt.site,DIRECT
-  - DOMAIN-SUFFIX,aidoru-online.me,DIRECT
-  - DOMAIN-SUFFIX,alpharatio.cc,DIRECT
-  - DOMAIN-SUFFIX,animebytes.tv,DIRECT
-  - DOMAIN-SUFFIX,animetorrents.me,DIRECT
-  - DOMAIN-SUFFIX,anthelion.me,DIRECT
-  - DOMAIN-SUFFIX,asiancinema.me,DIRECT
-  - DOMAIN-SUFFIX,audiences.me,DIRECT
-  - DOMAIN-SUFFIX,avgv.cc,DIRECT
-  - DOMAIN-SUFFIX,avistaz.to,DIRECT
-  - DOMAIN-SUFFIX,awesome-hd.me,DIRECT
-  - DOMAIN-SUFFIX,beitai.pt,DIRECT
-  - DOMAIN-SUFFIX,beyond-hd.me,DIRECT
-  - DOMAIN-SUFFIX,bibliotik.me,DIRECT
-  - DOMAIN-SUFFIX,bittorrent.com,DIRECT
-  - DOMAIN-SUFFIX,blutopia.xyz,DIRECT
-  - DOMAIN-SUFFIX,broadcasthe.net,DIRECT
-  - DOMAIN-SUFFIX,bt.byr.cn,DIRECT
-  - DOMAIN-SUFFIX,bt.neu6.edu.cn,DIRECT
-  - DOMAIN-SUFFIX,btschool.club,DIRECT
-  - DOMAIN-SUFFIX,bwtorrents.tv,DIRECT
-  - DOMAIN-SUFFIX,ccfbits.org,DIRECT
-  - DOMAIN-SUFFIX,cgpeers.com,DIRECT
-  - DOMAIN-SUFFIX,chdbits.co,DIRECT
-  - DOMAIN-SUFFIX,cinemageddon.net,DIRECT
-  - DOMAIN-SUFFIX,cinematik.net,DIRECT
-  - DOMAIN-SUFFIX,cinemaz.to,DIRECT
-  - DOMAIN-SUFFIX,classix-unlimited.co.uk,DIRECT
-  - DOMAIN-SUFFIX,concertos.live,DIRECT
-  - DOMAIN-SUFFIX,dicmusic.club,DIRECT
-  - DOMAIN-SUFFIX,discfan.net,DIRECT
-  - DOMAIN-SUFFIX,dxdhd.com,DIRECT
-  - DOMAIN-SUFFIX,eastgame.org,DIRECT
-  - DOMAIN-SUFFIX,empornium.me,DIRECT
-  - DOMAIN-SUFFIX,et8.org,DIRECT
-  - DOMAIN-SUFFIX,exoticaz.to,DIRECT
-  - DOMAIN-SUFFIX,extremlymtorrents.ws,DIRECT
-  - DOMAIN-SUFFIX,filelist.io,DIRECT
-  - DOMAIN-SUFFIX,gazellegames.net,DIRECT
-  - DOMAIN-SUFFIX,gfxpeers.net,DIRECT
-  - DOMAIN-SUFFIX,hd-space.org,DIRECT
-  - DOMAIN-SUFFIX,hd-torrents.org,DIRECT
-  - DOMAIN-SUFFIX,hd4.xyz,DIRECT
-  - DOMAIN-SUFFIX,hd4fans.org,DIRECT
-  - DOMAIN-SUFFIX,hdarea.co,DIRECT
-  - DOMAIN-SUFFIX,hdatmos.club,DIRECT
-  - DOMAIN-SUFFIX,hdbd.us,DIRECT
-  - DOMAIN-SUFFIX,hdbits.org,DIRECT
-  - DOMAIN-SUFFIX,hdchina.org,DIRECT
-  - DOMAIN-SUFFIX,hdcity.city,DIRECT
-  - DOMAIN-SUFFIX,hddolby.com,DIRECT
-  - DOMAIN-SUFFIX,hdfans.org,DIRECT
-  - DOMAIN-SUFFIX,hdhome.org,DIRECT
-  - DOMAIN-SUFFIX,hdpost.top,DIRECT
-  - DOMAIN-SUFFIX,hdroute.org,DIRECT
-  - DOMAIN-SUFFIX,hdsky.me,DIRECT
-  - DOMAIN-SUFFIX,hdstreet.club,DIRECT
-  - DOMAIN-SUFFIX,hdtime.org,DIRECT
-  - DOMAIN-SUFFIX,hdupt.com,DIRECT
-  - DOMAIN-SUFFIX,hdzone.me,DIRECT
-  - DOMAIN-SUFFIX,hitpt.com,DIRECT
-  - DOMAIN-SUFFIX,hitpt.org,DIRECT
-  - DOMAIN-SUFFIX,hudbt.hust.edu.cn,DIRECT
-  - DOMAIN-SUFFIX,icetorrent.org,DIRECT
-  - DOMAIN-SUFFIX,iptorrents.com,DIRECT
-  - DOMAIN-SUFFIX,j99.info,DIRECT
-  - DOMAIN-SUFFIX,joyhd.net,DIRECT
-  - DOMAIN-SUFFIX,jpopsuki.eu,DIRECT
-  - DOMAIN-SUFFIX,karagarga.in,DIRECT
-  - DOMAIN-SUFFIX,keepfrds.com,DIRECT
-  - DOMAIN-SUFFIX,leaguehd.com,DIRECT
-  - DOMAIN-SUFFIX,lemonhd.org,DIRECT
-  - DOMAIN-SUFFIX,lztr.me,DIRECT
-  - DOMAIN-SUFFIX,m-team.cc,DIRECT
-  - DOMAIN-SUFFIX,madsrevolution.net,DIRECT
-  - DOMAIN-SUFFIX,moecat.best,DIRECT
-  - DOMAIN-SUFFIX,morethan.tv,DIRECT
-  - DOMAIN-SUFFIX,msg.vg,DIRECT
-  - DOMAIN-SUFFIX,myanonamouse.net,DIRECT
-  - DOMAIN-SUFFIX,nanyangpt.com,DIRECT
-  - DOMAIN-SUFFIX,ncore.cc,DIRECT
-  - DOMAIN-SUFFIX,nebulance.io,DIRECT
-  - DOMAIN-SUFFIX,nicept.net,DIRECT
-  - DOMAIN-SUFFIX,npupt.com,DIRECT
-  - DOMAIN-SUFFIX,nwsuaf6.edu.cn,DIRECT
-  - DOMAIN-SUFFIX,open.cd,DIRECT
-  - DOMAIN-SUFFIX,oppaiti.me,DIRECT
-  - DOMAIN-SUFFIX,orpheus.network,DIRECT
-  - DOMAIN-SUFFIX,ourbits.club,DIRECT
-  - DOMAIN-SUFFIX,passthepopcorn.me,DIRECT
-  - DOMAIN-SUFFIX,pornbits.net,DIRECT
-  - DOMAIN-SUFFIX,privatehd.to,DIRECT
-  - DOMAIN-SUFFIX,DIRECTerclub.com,DIRECT
-  - DOMAIN-SUFFIX,DIRECThome.net,DIRECT
-  - DOMAIN-SUFFIX,DIRECTsbao.club,DIRECT
-  - DOMAIN-SUFFIX,pussytorrents.org,DIRECT
-  - DOMAIN-SUFFIX,redacted.ch,DIRECT
-  - DOMAIN-SUFFIX,sdbits.org,DIRECT
-  - DOMAIN-SUFFIX,sjtu.edu.cn,DIRECT
-  - DOMAIN-SUFFIX,skyey2.com,DIRECT
-  - DOMAIN-SUFFIX,soulvoice.club,DIRECT
-  - DOMAIN-SUFFIX,springsunday.net,DIRECT
-  - DOMAIN-SUFFIX,tjupt.org,DIRECT
-  - DOMAIN-SUFFIX,torrentday.com,DIRECT
-  - DOMAIN-SUFFIX,torrentleech.org,DIRECT
-  - DOMAIN-SUFFIX,torrentseeds.org,DIRECT
-  - DOMAIN-SUFFIX,totheglory.im,DIRECT
-  - DOMAIN-SUFFIX,trontv.com,DIRECT
-  - DOMAIN-SUFFIX,u2.dmhy.org,DIRECT
-  - DOMAIN-SUFFIX,uhdbits.org,DIRECT
-  - DOMAIN-SUFFIX,xauat6.edu.cn,DIRECT
-  # PT 站点结束
-  
   # SPEEDTEST
-  - DOMAIN-SUFFIX,fast.com,PROXY
-  - DOMAIN-SUFFIX,ooklaserver.net,PROXY
-  - DOMAIN-SUFFIX,speed.cloudflare.com,PROXY
-  - DOMAIN-KEYWORD,speedtest,PROXY
+  - DOMAIN-SUFFIX,fast.com
+  - DOMAIN-SUFFIX,ooklaserver.net
+  - DOMAIN-SUFFIX,speed.cloudflare.com
+  - DOMAIN-KEYWORD,speedtest
   # END OF SPEEDTEST
