--- a/direct.yaml
+++ b/direct.yaml
@@ -95,9 +95,9 @@ payload:
   - DOMAIN-SUFFIX,passthepopcorn.me
   - DOMAIN-SUFFIX,pornbits.net
   - DOMAIN-SUFFIX,privatehd.to
-  - DOMAIN-SUFFIXerclub.com
-  - DOMAIN-SUFFIXhome.net
-  - DOMAIN-SUFFIXsbao.club
+  - DOMAIN-SUFFIX,erclub.com
+  - DOMAIN-SUFFIX,home.net
+  - DOMAIN-SUFFIX,sbao.club
   - DOMAIN-SUFFIX,pussytorrents.org
   - DOMAIN-SUFFIX,redacted.ch
   - DOMAIN-SUFFIX,sdbits.org
